--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "author": "Tom Wilson <tom@hyper.io>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "node --test"
+  },
+  "dependencies": {
+    "arweave": "^1.14.4",
+    "hyper-async": "^1.1.2",
+    "ramda": "^0.29.0",
+    "yargs": "^17.7.2"
   }
 }
