--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "hyper-async": "^1.1.2",
     "ramda": "^0.29.0",
     "yargs": "^17.7.2"
+  },
+  "devDependencies": {
+    "@bundlr-network/client": "^0.11.17"
   }
 }
