--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node --test"
   },
   "dependencies": {
+    "@permaweb/ao-sdk": "^0.0.7",
     "arweave": "^1.14.4",
     "hyper-async": "^1.1.2",
     "ramda": "^0.29.0",
