--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos-cli",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
@@ -16,9 +16,7 @@
     "arweave": "^1.14.4",
     "hyper-async": "^1.1.2",
     "ramda": "^0.29.0",
-    "yargs": "^17.7.2"
-  },
-  "devDependencies": {
+    "yargs": "^17.7.2",
     "@bundlr-network/client": "^0.11.17"
   }
 }
