--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos-cli",
-  "version": "1.2.0",
+  "version": "1.2.4",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
@@ -12,10 +12,11 @@
     "test": "node --test"
   },
   "dependencies": {
-    "@bundlr-network/client": "^0.11.17",
     "@permaweb/ao-sdk": "^0.0.18",
     "arweave": "^1.14.4",
+    "chalk": "^5.3.0",
     "hyper-async": "^1.1.2",
+    "ora": "^7.0.1",
     "yargs": "^17.7.2"
   }
 }
