--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos-cli",
-  "version": "1.2.5",
+  "version": "1.2.7",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
@@ -9,7 +9,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "test": "node --test"
+    "test": "node --test",
+    "generate-wallet": "node -e \"require('arweave').init({}).wallets.generate().then(JSON.stringify).then(console.log.bind(console))\" > wallet.json"
   },
   "dependencies": {
     "@permaweb/ao-sdk": "^0.0.18",
