--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
-  "name": "@permaweb/aos-cli",
-  "version": "1.2.7",
+  "name": "@permaweb/aos",
+  "version": "1.2.8",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
