--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
@@ -11,7 +11,7 @@
     "start": "node src/index.js",
     "test": "node --test",
     "generate-wallet": "node -e \"require('arweave').init({}).wallets.generate().then(JSON.stringify).then(console.log.bind(console))\" > wallet.json",
-    "publish": "npx -y ardrive-cli upload-file --turbo --local-path=./permaweb-aos-1.3.1.tgz -w ./wallet.json -F 2985eec7-a5c9-4cb7-afd5-b87b506f45ea"
+    "deploy": "npx -y ardrive-cli upload-file --turbo --local-path=./$(npm pack) -w ./wallet.json -F 2985eec7-a5c9-4cb7-afd5-b87b506f45ea"
   },
   "dependencies": {
     "@permaweb/ao-sdk": "^0.0.22",
