--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
@@ -14,11 +14,12 @@
     "deploy": "npx -y ardrive-cli upload-file --turbo --local-path=./$(npm pack) -w ./wallet.json -F 2985eec7-a5c9-4cb7-afd5-b87b506f45ea"
   },
   "dependencies": {
-    "@permaweb/ao-sdk": "^0.0.22",
+    "@permaweb/ao-connect": "^0.0.27",
     "arweave": "^1.14.4",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
     "hyper-async": "^1.1.2",
+    "minimist": "^1.2.8",
     "ora": "^7.0.1",
     "yargs": "^17.7.2"
   }
