--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "1.3.9",
+  "version": "1.3.10",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
@@ -17,6 +17,7 @@
     "@permaweb/ao-connect": "^0.0.27",
     "arweave": "^1.14.4",
     "chalk": "^5.3.0",
+    "fetch-retry": "^5.0.6",
     "figlet": "^1.7.0",
     "hyper-async": "^1.1.2",
     "minimist": "^1.2.8",
