--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "deploy": "npx -y ardrive-cli upload-file --turbo --local-path=./$(npm pack) -w ./wallet.json -F 2985eec7-a5c9-4cb7-afd5-b87b506f45ea | jq .created[0].dataTxId"
   },
   "dependencies": {
-    "@permaweb/aoconnect": "^0.0.33",
+    "@permaweb/aoconnect": "^0.0.35",
     "arweave": "^1.14.4",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
     "hyper-async": "^1.1.2",
     "minimist": "^1.2.8",
+    "node-cron": "^3.0.3",
     "ora": "^7.0.1",
     "yargs": "^17.7.2"
   }
