--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "semver": "^7.5.4",
     "tar-stream": "^3.1.7",
     "yargs": "^17.7.2"
+  },
+  "aos": {
+    "module": "A_27SBYdXagRZK_0sfxgh4aSin-LCI7Y0PkNbxelozk"
   }
 }
