--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "1.8.6",
+  "version": "1.8.7",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/twilson63/ao-repl.git",
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "test": "node --test",
+    "test": "node --test test",
     "generate-wallet": "node -e \"require('arweave').init({}).wallets.generate().then(JSON.stringify).then(console.log.bind(console))\" > wallet.json",
     "deploy": "npx -y ardrive-cli upload-file --turbo --local-path=./$(npm pack) -w ~/.wallet.json -F 2985eec7-a5c9-4cb7-afd5-b87b506f45ea | jq .created[0].dataTxId"
   },
@@ -28,6 +28,6 @@
     "yargs": "^17.7.2"
   },
   "aos": {
-    "module": "-fPDTAL564yP6pdYMEZUN3e1WD3vTprtWr8XJeBhhSU"
+    "module": "zxczO0TgpuXN595OZ48aqdaPln_FXdfoC3tdYoyg_HY"
   }
 }
