--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "1.9.1",
+  "version": "1.9.2",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
-  "repository": "https://github.com/twilson63/ao-repl.git",
+  "repository": "https://github.com/permaweb/aos.git",
   "author": "Tom Wilson <tom@hyper.io>",
   "license": "MIT",
   "scripts": {
