--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "1.10.7",
+  "version": "1.10.8",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/permaweb/aos.git",
@@ -18,6 +18,7 @@
     "arweave": "^1.14.4",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
+    "https-proxy-agent": "^7.0.4",
     "hyper-async": "^1.1.2",
     "minimist": "^1.2.8",
     "node-cron": "^3.0.3",
