add patch helper

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "yargs": "^17.7.2"
   },
   "aos": {
-    "module": "pJlh1tfQHSJWlpbCLEZOOeRkSEDickxXuTeRiyQcl8E"
+    "//module": "pJlh1tfQHSJWlpbCLEZOOeRkSEDickxXuTeRiyQcl8E",
+    "module": "5l00H2S0RuPYe-V5GAI-1RgQEHFInSMr20E-3RNXJ_U"
   },
   "devDependencies": {
     "esbuild": "^0.20.1"
