--- a/process/package.json
+++ b/process/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "ao build",
-    "test": "node --test --experimental-wasm-memory64 test",
-    "deploy": "ao publish -w ~/.wallet.json process.wasm -t Memory-Limit -v 500-mb -t Compute-Limit -v 9000000000000"
+    "test": "node --test --experimental-wasm-memory64",
+    "deploy": "ao publish -w ~/.wallet.json process.wasm -t Memory-Limit -v 1-gb -t Compute-Limit -v 9000000000000 -t Module-Format -v wasm64-unknown-emscripten-draft_2024_02_15"
   }
 }
