--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "1.12.1",
+  "version": "2.0.0.rc1",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/permaweb/aos.git",
@@ -29,9 +29,9 @@
     "yargs": "^17.7.2"
   },
   "aos": {
-    "module": "yTyqRSfbD6BuiDra9jDNjq8TLe7rhneDcmQ64CkmkdU",
+    "module": "BeSoxUfhmb09dYSs3YviIVnCrNQv5aYUnZZBxTyOCKQ",
     "sqlite": "ghSkge2sIUD_F00ym5sEimC63BDBuBrq4b5OcwxOjiw",
-    "version": "0.2.2.rc1"
+    "version": "2.0.0.rc1"
   },
   "devDependencies": {
     "esbuild": "^0.20.1"
