--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-cron": "^3.0.3",
     "ora": "^7.0.1",
     "pretty-file-tree": "^1.0.1",
+    "prompts": "^2.4.2",
     "semver": "^7.5.4",
     "tar-stream": "^3.1.7",
     "yargs": "^17.7.2"
