--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "name": "@permaweb/aos",
-  "version": "2.0.0-rc2",
+  "version": "2.0.0",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
   "repository": "https://github.com/permaweb/aos.git",
@@ -29,9 +29,10 @@
     "yargs": "^17.7.2"
   },
   "aos": {
-    "module": "PSPMkkFrJzYI2bQbkmeEQ5ONmeR-FJZu0fNQoSCU1-I",
-    "sqlite": "C4bxMlK8d_wQ-QpXIIZLU8UWXu6Sd8PDJw7HN3nNE2I",
-    "version": "2.0.0.rc2"
+    "module": "ffvkmPM1jW71hFlBpVbaIapBa_Wl6UIwfdTkDNqsKNw",
+    "sqlite": "G991Xp6Kh28k8_AZcnwaqJ6LZcHlsZcMkrH1mJoAy84",
+    "llama": "Eb_Ol0yQsmAaM_KUzbTKbrwJ0Pi3zAq2s9WEegqhr6I",
+    "version": "2.0.0"
   },
   "devDependencies": {
     "esbuild": "^0.20.1"
