--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "type": "module",
   "name": "@permaweb/aos",
   "version": "2.0.1",
+  "repository": "https://github.com/permaweb/aos.git",
+  "license": "MIT",
+  "author": "Tom Wilson <tom@hyper.io>",
+  "type": "module",
   "main": "src/index.js",
   "bin": "./bin/aos.js",
-  "repository": "https://github.com/permaweb/aos.git",
-  "author": "Tom Wilson <tom@hyper.io>",
-  "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
     "test": "node --test test",
     "build-docs": "rm -rf process/docs && ldoc .",
-    "generate-wallet": "node -e \"require('arweave').init({}).wallets.generate().then(JSON.stringify).then(console.log.bind(console))\" > wallet.json",
     "deploy": "npx -y ardrive-cli@2.0.4 upload-file --turbo --local-path=./$(npm pack) -w ~/.wallet.json -F 0d009773-ce2c-4539-8e0d-c331db9ab348 | jq .created[0].dataTxId",
+    "generate-wallet": "node -e \"require('arweave').init({}).wallets.generate().then(JSON.stringify).then(console.log.bind(console))\" > wallet.json",
     "staged": "lint-staged"
   },
   "dependencies": {
@@ -28,14 +28,10 @@
     "pretty-file-tree": "^1.0.1",
     "prompts": "^2.4.2",
     "semver": "^7.5.4",
+    "sort-package-json": "^2.10.1",
+    "standard": "^17.1.2",
     "tar-stream": "^3.1.7",
     "yargs": "^17.7.2"
-  },
-  "aos": {
-    "module": "oKBlsMP3UWrAUURWUzGO4ZGEqlurAL5UkidMLrYo8EM",
-    "sqlite": "9VBLtu07DtUhPNdIqnw0Z_QJ_GKQqNXHpzumG8DY-J4",
-    "llama": "7eiZkMWDUQmY1SBIpumzYR5_XhVMbnjmA27Xbyt4QxU",
-    "version": "2.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -43,5 +39,11 @@
     "esbuild": "^0.20.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10"
+  },
+  "aos": {
+    "module": "oKBlsMP3UWrAUURWUzGO4ZGEqlurAL5UkidMLrYo8EM",
+    "sqlite": "9VBLtu07DtUhPNdIqnw0Z_QJ_GKQqNXHpzumG8DY-J4",
+    "llama": "7eiZkMWDUQmY1SBIpumzYR5_XhVMbnjmA27Xbyt4QxU",
+    "version": "2.0.1"
   }
 }
