--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "extensions/*"
   ],
   "scripts": {
-    "start": "node src/index.js",
-    "test": "node --test test",
-    "deploy": "npx -y ardrive-cli@2.0.4 upload-file --turbo --local-path=./$(npm pack) -w ~/.wallet.json -F 0d009773-ce2c-4539-8e0d-c331db9ab348 | jq .created[0].dataTxId",
     "build-docs": "rm -rf process/docs && ldoc .",
+    "deploy": "npx -y ardrive-cli@2.0.4 upload-file --turbo --local-path=./$(npm pack) -w ~/.wallet.json -F 0d009773-ce2c-4539-8e0d-c331db9ab348 | jq .created[0].dataTxId",
     "generate-wallet": "node -e \"require('arweave').init({}).wallets.generate().then(JSON.stringify).then(console.log.bind(console))\" > wallet.json",
     "staged": "lint-staged",
+    "start": "node src/index.js",
+    "test": "node --test test",
     "test-all": "yarn workspaces --parallel run test"
   },
   "dependencies": {
@@ -34,8 +34,6 @@
     "pretty-file-tree": "^1.0.1",
     "prompts": "^2.4.2",
     "semver": "^7.5.4",
-    "sort-package-json": "^2.10.1",
-    "standard": "^17.1.2",
     "tar-stream": "^3.1.7",
     "yargs": "^17.7.2"
   },
@@ -45,7 +43,10 @@
     "@johnnymorganz/stylua-bin": "^0.20.0",
     "esbuild": "^0.20.1",
     "husky": "^9.1.6",
-    "lint-staged": "^15.2.10"
+    "lint-staged": "^15.2.10",
+    "markdown-toc-gen": "^1.1.0",
+    "sort-package-json": "^2.10.1",
+    "standard": "^17.1.2"
   },
   "aos": {
     "module": "oKBlsMP3UWrAUURWUzGO4ZGEqlurAL5UkidMLrYo8EM",
