fix: add process msg to inbox even if bootloader

--- a/process/package.json
+++ b/process/package.json
@@ -11,6 +11,7 @@
     "build": "ao build",
     "test": "node --test --experimental-wasm-memory64",
     "deploy": "ao publish -w ~/.wallet.json process.wasm -t Memory-Limit -v 1-gb -t Compute-Limit -v 9000000000000 -t Module-Format -v wasm64-unknown-emscripten-draft_2024_02_15 -t AOS-Version -v 2.0.1 -t Name -v aos-lg-2.0.1",
+    "deploy-test": "ao publish -w ~/.wallet.json process.wasm -t Memory-Limit -v 1-gb -t Compute-Limit -v 9000000000000 -t Module-Format -v wasm64-unknown-emscripten-draft_2024_02_15 -t AOS-Version -v 2.0.1 -t Name -v aos-test",
     "deploy-sqlite": "ao publish -w ~/.wallet.json process.wasm -t Memory-Limit -v 1-gb -t Compute-Limit -v 9000000000000 -t Module-Format -v wasm64-unknown-emscripten-draft_2024_02_15 -t AOS-Version -v 2.0.1 -t Name -v sqlite-lg-2.0.1",
     "deploy-llama": "ao publish -w ~/.wallet.json process.wasm -t Memory-Limit -v 16-gb -t Compute-Limit -v 9000000000000 -t Module-Format -v wasm64-unknown-emscripten-draft_2024_02_15 -t AOS-Version -v 2.0.1 -t Name -v llama-xxl-2.0.1 -t Extension -v WeaveDrive"
   }
