--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "test-all": "yarn workspaces --parallel run test"
   },
   "dependencies": {
-    "@permaweb/aoconnect": "^0.0.67",
+    "@permaweb/aoconnect": "^0.0.68",
     "arweave": "^1.15.1",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
+    "http-message-signatures": "^1.0.4",
     "https-proxy-agent": "^7.0.4",
     "hyper-async": "^1.1.2",
     "minimist": "^1.2.8",
