--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test-all": "yarn workspaces --parallel run test"
   },
   "dependencies": {
-    "@permaweb/aoconnect": "^0.0.68",
+    "@permaweb/aoconnect": "^0.0.72",
     "arweave": "^1.15.1",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
@@ -36,6 +36,7 @@
     "prompts": "^2.4.2",
     "semver": "^7.5.4",
     "tar-stream": "^3.1.7",
+    "undici": "^7.3.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
