--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@permaweb/aoconnect": "^0.0.75",
+    "@permaweb/aoconnect-m2": "^0.0.75",
     "arweave": "^1.15.1",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
