--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test-all": "yarn workspaces --parallel run test"
   },
   "dependencies": {
-    "@permaweb/aoconnect": "^0.0.75",
-    "@permaweb/aoconnect-m2": "^0.0.75",
+    "@permaweb/aoconnect": "file:/Users/sam/src/ao/connect",
     "arweave": "^1.15.1",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
@@ -35,9 +34,10 @@
     "ora": "^7.0.1",
     "pretty-file-tree": "^1.0.1",
     "prompts": "^2.4.2",
+    "ramda": "^0.30.1",
     "semver": "^7.5.4",
     "tar-stream": "^3.1.7",
-    "undici": "^7.3.0",
+    "undici": "^7.4.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
