--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@permaweb/aos",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "private": true,
   "repository": "https://github.com/permaweb/aos.git",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "test-all": "yarn workspaces --parallel run test"
   },
   "dependencies": {
-    "@permaweb/aoconnect": "0.0.75",
+    "@permaweb/aoconnect": "^0.0.80",
     "arweave": "^1.15.1",
     "chalk": "^5.3.0",
     "figlet": "^1.7.0",
@@ -59,6 +59,6 @@
     "version": "2.0.6"
   },
   "hyper": {
-    "script": "qMFUCmvmGqWtb95lRkt9ln60NLHDkd_JVXL7RFG6yY4"
+    "script": "eLpl4KEcO6zdxUI9L7BinIwfPFr7TDegsnW3YF0Q7V8"
   }
 }
