--- a/hyper/package.json
+++ b/hyper/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "build": "node bundle.js > hyper-aos.lua",
     "deploy": "arx upload hyper-aos.lua -t arweave -w $WALLET_FILE --content-type text/x-lua"
+  },
+  "dependencies": {
+    "figlet": "^1.8.1"
   }
 }
