feat: adding hyper-aos

--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "sqlite": "lPkDN7vAoKMW4A6H9O3Q4faegLaXZ3HFix_E0lZkPlg",
     "llama": "l2C3iKWRxQgW-WnX0fCNuHMj6y2S_NWctnsTWcCwSuY",
     "version": "2.0.4"
+  },
+  "hyper": {
+    "script": "VUCozR1w1c8wPG_WIBNv9jAW-wt5eF-yQcTsm009nks"
   }
 }
