chg: s/script/module

--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
     "version": "2.0.4"
   },
   "hyper": {
-    "script": "8DvyaxF8xpHMgPdmpMnhcb1mjY-M8qr2kGxnCpGMb60"
+    "module": "8DvyaxF8xpHMgPdmpMnhcb1mjY-M8qr2kGxnCpGMb60"
   }
 }
