chore: update hyper-aos to 0.1.2

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "version": "2.0.4"
   },
   "hyper": {
-    "module": "xVcnPK8MPmcocS6zwq1eLmM2KhfyarP8zzmz3UVi1g4"
+    "module": "wal-fUK-YnB9Kp5mN8dgMsSqPSqiGx-0SvwFUSwpDBI",
+    "_version": "0.1.2"
   }
 }
