--- a/package.json
+++ b/package.json
@@ -22,34 +22,34 @@
     "test-all": "yarn workspaces --parallel run test"
   },
   "dependencies": {
-    "@permaweb/aoconnect": "^0.0.90",
-    "arweave": "^1.15.1",
-    "chalk": "^5.3.0",
-    "figlet": "^1.7.0",
-    "http-message-signatures": "^1.0.4",
-    "https-proxy-agent": "^7.0.4",
-    "hyper-async": "^1.1.2",
-    "minimist": "^1.2.8",
-    "node-cron": "^3.0.3",
-    "ora": "^7.0.1",
-    "pretty-file-tree": "^1.0.1",
-    "prompts": "^2.4.2",
-    "semver": "^7.5.4",
-    "tar-stream": "^3.1.7",
-    "undici": "^7.8.0",
-    "yargs": "^17.7.2"
+    "@permaweb/aoconnect": "0.0.90",
+    "arweave": "1.15.1",
+    "chalk": "5.3.0",
+    "figlet": "1.7.0",
+    "http-message-signatures": "1.0.4",
+    "https-proxy-agent": "7.0.4",
+    "hyper-async": "1.1.2",
+    "minimist": "1.2.8",
+    "node-cron": "3.0.3",
+    "ora": "7.0.1",
+    "pretty-file-tree": "1.0.1",
+    "prompts": "2.4.2",
+    "semver": "7.5.4",
+    "tar-stream": "3.1.7",
+    "undici": "7.8.0",
+    "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@johnnymorganz/stylua-bin": "^0.20.0",
-    "esbuild": "^0.20.1",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "markdown-toc-gen": "^1.1.0",
-    "shelljs": "^0.9.2",
-    "sort-package-json": "^2.10.1",
-    "standard": "^17.1.2"
+    "@commitlint/cli": "19.5.0",
+    "@commitlint/config-conventional": "19.5.0",
+    "@johnnymorganz/stylua-bin": "0.20.0",
+    "esbuild": "0.20.1",
+    "husky": "9.1.6",
+    "lint-staged": "15.2.10",
+    "markdown-toc-gen": "1.1.0",
+    "shelljs": "0.9.2",
+    "sort-package-json": "2.10.1",
+    "standard": "17.1.2"
   },
   "aos": {
     "module": "ISShJH1ij-hPPt9St5UFFr_8Ys3Kj5cyg7zrMGt7H9s",
